# AdvancedDiceRoll

./: .dir-locals.el  CMakeLists.txt  Doxyfile.in  ExpressionNode.cpp  LICENSE.txt  README.md  stdafx.cpp  stdafx.h
Operations/: RandomOperation.h
include/DiceRoll/: stdafx.hpp
include/DiceRoll/Operations/: ComplexOperation.hpp  DiscardOperation.hpp  GetNumberOperation.hpp  IOperation.hpp  RandomOperation.hpp  RepeatOperation.h  RollResult.h  SumOperation.hpp
include/DiceRoll/RollCompare/: Comparators.hpp  IRollCompare.hpp
src/: #main.cpp#  CMakeLists.txt  ExpressionNode.hpp  MathematicalExpressionParser.cpp  main.cpp  stdafx.h
src/Operations/: #IOperation.h#  .#IOperation.h  CMakeLists.txt  ComplexOperation.cpp  DiscardOperation.cpp  GetNumberOperation.cpp  GetNumberOperation.h  GetNumberOperation.hpp  IOperation.h  IOperation.hpp  RandomOperation.cpp  RandomOperation.h  RandomOperation.hpp  RepeatOperation.cpp  RollResult.cpp  SumOperation.cpp
src/Operations/RollCompare/: Comparators.cpp
test/: CMakeLists.txt  DiscardOperationTest.cpp  GetNumberOperationTest.cpp  MultiOperationTest.cpp  OperationTests.cpp  RandomOperationTest.cpp  RepeatOperationTest.cpp  RollCompareTest.cpp  RollResultTest.cpp  SumOperationTest.cpp  main.cpp
